[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isr-earnings-calendar"
version = "0.1.0"
description = "Automated ICS feed generator for Maya earnings events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "black>=24,<26",
    "flake8>=7,<8",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".pytest_cache", ".venv", "tmp"]
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]