[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isr-earnings-calendar"
version = "0.1.0"
description = "Automated ICS feed generator for Maya earnings events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "fastapi>=0.110,<1.0",
    "google-genai>=2.0,<3.0",
    "icalendar>=7.0,<8.0",
    "jinja2>=3.1,<4.0",
    "pytz>=2024.1",
    "requests>=2.32,<3.0",
    "resend>=2.0,<3.0",
    "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "black>=24,<26",
    "flake8>=7,<8",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".pytest_cache", ".venv", "tmp"]
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
